tests/sksl/errors/BooleanArithmetic.glsl
### Compilation failed:

error: 1: type mismatch: '+' cannot operate on 'bool', 'bool'
error: 2: type mismatch: '-' cannot operate on 'bool', 'bool'
error: 3: type mismatch: '*' cannot operate on 'bool', 'bool'
error: 4: type mismatch: '/' cannot operate on 'bool', 'bool'
error: 5: type mismatch: '%' cannot operate on 'bool', 'bool'
error: 6: type mismatch: '<<' cannot operate on 'bool', 'bool'
error: 7: type mismatch: '>>' cannot operate on 'bool', 'bool'
error: 8: '-' cannot operate on 'bool'
error: 9: '~' cannot operate on 'bool'
error: 10: type mismatch: '&' cannot operate on 'bool', 'bool'
error: 11: type mismatch: '|' cannot operate on 'bool', 'bool'
error: 12: type mismatch: '^' cannot operate on 'bool', 'bool'
error: 14: type mismatch: '+' cannot operate on 'bool2', 'bool2'
error: 15: type mismatch: '-' cannot operate on 'bool2', 'bool2'
error: 16: type mismatch: '*' cannot operate on 'bool2', 'bool2'
error: 17: type mismatch: '/' cannot operate on 'bool2', 'bool2'
error: 18: type mismatch: '%' cannot operate on 'bool2', 'bool2'
error: 19: type mismatch: '<<' cannot operate on 'bool2', 'bool2'
error: 20: type mismatch: '>>' cannot operate on 'bool2', 'bool2'
error: 21: '!' cannot operate on 'bool2'
error: 22: '-' cannot operate on 'bool2'
error: 23: '~' cannot operate on 'bool2'
error: 24: type mismatch: '&' cannot operate on 'bool2', 'bool2'
error: 25: type mismatch: '|' cannot operate on 'bool2', 'bool2'
error: 26: type mismatch: '^' cannot operate on 'bool2', 'bool2'
25 errors
